kubernetes/infra/networking/gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
