kubernetes/infra/networking/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lan-gateway
  namespace: gateway-system
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      metallb.universe.tf/address-pool: lan-pool
      metallb.universe.tf/loadBalancerIPs: 192.168.1.244
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: lan-services-tls
      allowedRoutes:
        namespaces:
          from: Same
