kubernetes/infra/networking/gateway/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-http-to-https
  namespace: gateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan-gateway
      sectionName: http
  hostnames:
    - grafana.lab.pragalva.me
    - hubble.lab.pragalva.me
    - kuma.lab.pragalva.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: gateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan-gateway
      sectionName: https
  hostnames:
    - grafana.lab.pragalva.me
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kps-grafana
          namespace: monitoring
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: gateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan-gateway
      sectionName: https
  hostnames:
    - hubble.lab.pragalva.me
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: hubble-ui
          namespace: kube-system
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kuma
  namespace: gateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan-gateway
      sectionName: https
  hostnames:
    - kuma.lab.pragalva.me
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: uptime-kuma
          namespace: uptime
          port: 3001
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
